--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   
 
 
 
-
+<h1>You the best!!!</h1>
 
 
 <script src="script.js"></script>
   
-  <a style="styles.css"></a>
+
 
 
 
